@@ -12,23 +12,33 @@
 package org.eclipse.birt.chart.extension.datafeed;
 
 import org.eclipse.birt.chart.computation.ValueFormatter;
-import org.eclipse.birt.chart.datafeed.IDataPointEntry;
+import org.eclipse.birt.chart.datafeed.NumberDataPointEntry;
 import org.eclipse.birt.chart.exception.ChartException;
 import org.eclipse.birt.chart.log.Logger;
 import org.eclipse.birt.chart.model.attribute.FormatSpecifier;
+import org.eclipse.birt.chart.util.BigNumber;
 
+import com.ibm.icu.math.BigDecimal;
 import com.ibm.icu.util.ULocale;
 
 /**
  * DifferenceEntry
  */
-public final class DifferenceEntry implements IDataPointEntry
+public final class DifferenceEntry extends NumberDataPointEntry
 {
 
 	private double dPosValue;
 
 	private double dNegValue;
 
+	private BigNumber bnPosValue;
+	
+	private BigNumber bnNegValue;
+	
+	private boolean isBigNumber = false;
+	
+	private BigDecimal divisor;
+	
 	/**
 	 * The constructor.
 	 */
@@ -36,6 +46,11 @@ public final class DifferenceEntry implements IDataPointEntry
 	{
 		this.dPosValue = dPositiveValue;
 		this.dNegValue = dNegativeValue;
+	}
+
+	public DifferenceEntry( BigNumber bnPositiveValue, BigNumber bnNegativeValue )
+	{
+		init( bnPositiveValue, bnNegativeValue );
 	}
 
 	/**
@@ -47,12 +62,36 @@ public final class DifferenceEntry implements IDataPointEntry
 	{
 		assert oaTwoComponents.length == 2;
 
+		if ( oaTwoComponents[0] instanceof BigNumber )
+		{
+			init( (BigNumber) oaTwoComponents[0],
+					(BigNumber) oaTwoComponents[1] );
+		}
+		else
+		{
+			init( oaTwoComponents );
+		}
+	}
+
+	protected void init( Object[] oaTwoComponents )
+	{
+		isBigNumber = false;
 		this.dPosValue = ( oaTwoComponents[0] instanceof Number ) ? ( (Number) oaTwoComponents[0] ).doubleValue( )
 				: Double.NaN;
 		this.dNegValue = ( oaTwoComponents[1] instanceof Number ) ? ( (Number) oaTwoComponents[1] ).doubleValue( )
 				: Double.NaN;
 	}
 
+	protected void init( BigNumber bnPositiveValue, BigNumber bnNegativeValue )
+	{
+		isBigNumber = true;
+		this.bnPosValue = bnPositiveValue;
+		this.bnNegValue = bnNegativeValue;
+		divisor = bnPosValue.getDivisor( );
+		dPosValue = bnPosValue.doubleValue( );
+		dNegValue = bnNegValue.doubleValue( );
+	}
+	
 	/*
 	 * (non-Javadoc)
 	 * 
@@ -71,6 +110,15 @@ public final class DifferenceEntry implements IDataPointEntry
 		return dPosValue;
 	}
 
+	public final Number getPositiveValueNumber( )
+	{
+		if ( isBigNumber )
+		{
+			return bnPosValue;
+		}
+		return Double.valueOf( dPosValue );
+	}
+	
 	/**
 	 * @param value
 	 *            The positive value to set.
@@ -80,6 +128,15 @@ public final class DifferenceEntry implements IDataPointEntry
 		this.dPosValue = value;
 	}
 
+	public final void setPositiveValue( Number value )
+	{
+		if ( isBigNumber && value instanceof BigNumber )
+		{
+			bnPosValue = (BigNumber) value;
+		}
+		setPositiveValue( value.doubleValue( ) );
+	}
+	
 	/**
 	 * @return Returns the negative value.
 	 */
@@ -88,6 +145,15 @@ public final class DifferenceEntry implements IDataPointEntry
 		return dNegValue;
 	}
 
+	public final Number getNegativeValueNumber( )
+	{
+		if ( isBigNumber )
+		{
+			return bnNegValue;
+		}
+		return Double.valueOf( dNegValue ); 
+	}
+	
 	/**
 	 * @param end
 	 *            The negative value to set.
@@ -96,6 +162,15 @@ public final class DifferenceEntry implements IDataPointEntry
 	{
 		this.dNegValue = value;
 	}
+	
+	public final void setNegativeValue( Number value )
+	{
+		if ( isBigNumber && value instanceof BigNumber )
+		{
+			bnNegValue = (BigNumber) value;
+		}
+		setNegativeValue( value.doubleValue( ) );
+	}
 
 	public String getFormattedString( String type, FormatSpecifier formatter,
 			ULocale locale )
@@ -103,16 +178,19 @@ public final class DifferenceEntry implements IDataPointEntry
 		String str = "";//$NON-NLS-1$
 		try
 		{
+			
 			if ( DifferenceDataPointDefinition.TYPE_POSITIVE_VALUE.equals( type ) )
 			{
-				str = ValueFormatter.format( new Double( dPosValue ),
+				Number posValue = isBigNumber ? bnPosValue : Double.valueOf( dPosValue );
+				str = ValueFormatter.format( posValue,
 						formatter,
 						locale,
 						null );
 			}
 			else if ( DifferenceDataPointDefinition.TYPE_NEGATIVE_VALUE.equals( type ) )
 			{
-				str = ValueFormatter.format( new Double( dNegValue ),
+				Number negValue = isBigNumber ? bnNegValue : Double.valueOf( dNegValue );
+				str = ValueFormatter.format( negValue,
 						formatter,
 						locale,
 						null );
@@ -139,7 +217,68 @@ public final class DifferenceEntry implements IDataPointEntry
 
 	public boolean isValid( )
 	{
+		if ( isBigNumber )
+		{
+			return true;
+		}
+		
 		return !Double.isNaN( dNegValue ) && !Double.isNaN( dPosValue );
 	}
 
+	/**
+	 * Checks if values are big number.
+	 * 
+	 * @return
+	 */
+	public boolean isBigNumber( )
+	{
+		return isBigNumber;
+	}
+	
+	/**
+	 * Returns divisor of big number.
+	 * 
+	 * @return
+	 */
+	public BigDecimal getDivisor( )
+	{
+		return divisor;
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.birt.chart.datafeed.NumberDataPointEntry#setNumberData(java.lang.Number[])
+	 */
+	@Override
+	public void setNumberData( Number[] data )
+	{
+		if ( data == null || data.length < 2  )
+		{
+			return;
+		}
+		
+		if ( data instanceof BigNumber[] )
+		{
+			init( ((BigNumber[])data)[0], ((BigNumber[])data)[1]);
+		}
+		else 
+		{
+			init( data );
+		}
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.birt.chart.datafeed.NumberDataPointEntry#getNumberData()
+	 */
+	@Override
+	public Number[] getNumberData( )
+	{
+		if ( isBigNumber )
+		{
+			return new BigNumber[]{bnPosValue, bnNegValue};
+		}
+		
+		return new Double[]{
+				Double.valueOf( dPosValue ), Double.valueOf( dNegValue )
+		};
+	}
 }
